@@ -1,9 +1,10 @@
 2004-12-03  Pascal Scheffers  <pascal@scheffers.net>
 
 	* tkchat.tcl: Sort the online users list -dictionary. Call [muc exit] to
-	cleanup the roster for the chat.
+	cleanup the roster for the chat. Fixed display of entry exit messages for
+	web and irc users, added more entry/exit messages and color them.
 
-2004-11-26  Pascal Scheffers  <pascal@scheffers.net>
+2004-12-01  Pascal Scheffers  <pascal@scheffers.net>
 
 	* tkchat.tcl: Added jabber resource in the connect dialog. Improved the
 	reconnect code, it now actually tries again. 	
